artifacts/policies/apply-on-forward-policy.yaml
apiVersion: projectcalico.org/v2
kind: NetworkPolicy
metadata:
  name: my-apply-on-forward-policy
spec:
  selector: role == 'database'
  ingress:
  - action: allow
    protocol: tcp
    source:
      selector: role == 'frontend'
    destination:
      ports:
      - 6379
  egress:
  - action: allow
  applyOnForward: true
