artifacts/policies/globalpolicy.yaml
apiVersion: projectcalico.org/v2
kind: GlobalNetworkPolicy
metadata:
  name: net-sec.my-first-global-policy
spec:
  selector: role == 'database'
  ingress:
  - action: allow
    protocol: tcp
    source:
      selector: role == 'frontend'
    destination:
      ports:
      - 6379
  egress:
  - action: allow
  tier: "net-sec"
